--- a/Test.html
+++ b/Test.html
@@ -12,7 +12,27 @@
 
 <div class="nav">
 
-    This is the navigation bar with links....
+
+
+    <nav>
+
+
+
+        <ul class="moveright">
+
+            <!--<li><a href="B&Bregistration.html">Help</a></li>-->
+            <li><a href="Customerinfo.html">Register</a></li>
+            <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
+            <li><a href="OwnerSignIn.php">Owner's Page</a></li>
+            <li><a href="Home.php">Search</a></li>
+
+
+        </ul>
+
+    </nav>
+
+
+
 </div>
 
 <main class="grid-container">
