--- a/Test.html
+++ b/Test.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-
+<section>
 <div class="banner">
 
     theB&Bhub.com
 </div>
-
+</section>
+<section>
 <div class="nav">
 
 
@@ -34,6 +35,7 @@
 
 
 </div>
+</section>
 
 <main class="grid-container">
 
