--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -17,9 +17,16 @@
 </head>
 
 <header>
-    <div class="right">
-        theB&Bhub.com
+    <section class="right">
+        <div class="left">
+            <img src = "assets/b&blogotransparent.png" id="img">
+
+
+        </div>
+        <div class=""rightside">
     </div>
+
+    </section>
 </header>
 
 <div class="nav">
