--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -19,7 +19,7 @@
 <header>
     <section class="right">
         <div class="left">
-            <img src = "assets/b&blogotransparent.png" id="img">
+            <img src = "assets/b&blogotransparentcrop.png" id="img">
 
 
         </div>
