--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -7,7 +7,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Property Registration</title>
+    <title>Register: theB&Bhub</title>
+    <link rel="icon"
+          type="image/png"
+          href="assets/b&bicon.png">
     <link type="text/css" rel="stylesheet" href="style.css"/>
 
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
