--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -146,21 +146,13 @@
 
 
         <table class="table2">
-            <tr><td colspan="2"><p>Message Board - advertisements - user info</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 1</p></td></tr>
+            <tr><td colspan="2"><p><strong>Example Message Board & User Information</strong></p></td></tr>
+            <tr class="tr2"><td class="t2"><p>Welcome, please use the form on this page to list your property on theB&Bhub.</p></td></tr>
             <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
             <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
             <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
             <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
             <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 7</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 8</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 9</p></td></tr>
-
-
-
-
-
 
 
         </table>
