--- a/SearchBB.html
+++ b/SearchBB.html
@@ -9,7 +9,39 @@
 
 <body>
 <section class="container" id="banner2">banner</section>
-<section class="container" id="navigation2">nav</section>
+<section class="container" id="navigation2">
+
+
+        <div class="right3">
+
+            <nav>
+
+
+
+                <ul class="moveright">
+
+                    <!--<li><a href="B&Bregistration.html">Help</a></li>-->
+                    <li><a href="B&Bregistration.html">Register</a></li>
+                    <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
+                    <li><a href="OwnerSignIn.php">Owner's Page</a></li>
+                    <li><a href="Home.php">Search</a></li>
+
+
+                </ul>
+
+            </nav>
+
+
+
+
+        </div>
+
+
+
+
+
+
+    </section>
 <section class="container" id="content2">content</section>
 <section class="container" id="foot2">footer</section>
 </body>
