--- a/SearchBB.html
+++ b/SearchBB.html
@@ -18,10 +18,10 @@
 
 
 
-                <ul class="moveright">
+                <ul>
 
                     <!--<li><a href="B&Bregistration.html">Help</a></li>-->
-                    <li><a href="B&Bregistration.html">Register</a></li>
+                    <li><a href="B&Bregistration.html">Register!</a></li>
                     <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
                     <li><a href="OwnerSignIn.php">Owner's Page</a></li>
                     <li><a href="Home.php">Search</a></li>
