--- a/SearchBB.html
+++ b/SearchBB.html
@@ -20,10 +20,9 @@
 
                 <ul>
 
-                    <!--<li><a href="B&Bregistration.html">Help</a></li>-->
+
                     <li><a href="B&Bregistration.html">Register!</a></li>
-                    <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
-                    <li><a href="OwnerSignIn.php">Owner's Page</a></li>
+                    <li><a href="OwnerSignIn.php">Members Section</a></li>
                     <li><a href="Home.php">Search</a></li>
 
 
