--- a/SearchBB.html
+++ b/SearchBB.html
@@ -21,8 +21,8 @@
                 <ul>
 
 
-                    <li><a href="B&Bregistration.html">Register!</a></li>
-                    <li><a href="OwnerSignIn.php">Members Section</a></li>
+                    <li><a href="B&Bregistration.html">Register</a></li>
+                    <li><a href="OwnerSignIn.php">Member Section</a></li>
                     <li><a href="Home.php">Search</a></li>
 
 
