--- a/SearchBB.html
+++ b/SearchBB.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <title>Search: theB&Bhub</title>
 </head>
 
 
 <body>
-<section class="container" id="banner2">banner</section>
-<section class="container" id="navigation2">
+<section class="container" id="banner">banner</section>
+<section class="container" id="navigation">
 
 
         <div>
