--- a/SearchBB.html
+++ b/SearchBB.html
@@ -34,7 +34,7 @@
     }
     if ($_SESSION["user"] != null) {
     echo "<p id='loginText'>Currently signed in as: " . $_SESSION["user"];
-            echo "    not you?<button id='logout()' onclick='logout()'>LOGOUT</button>";
+            echo "    not you?</p><button id='logout()' onclick='logout()'>LOGOUT</button>";
             }else{
             echo "< id='loginText'>currently not logged in!";
             }
