--- a/SearchBB.html
+++ b/SearchBB.html
@@ -16,12 +16,12 @@
 
 
 
-        <div class="left">
+        <div class="floatleft">
             <img src = "assets/b&blogotransparentcrop.png" id="img">
 
 
         </div>
-        <div class="rightside">
+        <div class="floatright">
 
 
             <?php
@@ -36,7 +36,7 @@
     echo "<p id='loginText'>Currently signed in as: " . $_SESSION["user"];
             echo "    not you?</p><button id='logout()' onclick='logout()'>LOGOUT</button>";
             }else{
-            echo "< id='loginText'>currently not logged in!";
+            echo "<p id='loginText'>currently not logged in!";
             }
 
 
