--- a/SearchBB.html
+++ b/SearchBB.html
@@ -69,6 +69,11 @@
 
     </section>
 <section class="container" id="content2">content</section>
-<section class="container" id="foot2">footer</section>
+
+<section class="container" id="foot">
+
+    <p>Copyright. Team D Solutions.</p>
+
+</section>
 </body>
 </html>
