--- a/SearchBB.html
+++ b/SearchBB.html
@@ -73,7 +73,7 @@
 
     <form action="searchResultsPage.php" method="post">
 
-        <table class="table1">
+        <table >
             <tr><td colspan="2">Search:</td></tr>
             <tr><td class="small">Let's get Started!</td></tr>
 
