--- a/SearchBB.html
+++ b/SearchBB.html
@@ -16,7 +16,7 @@
 
 
 
-        <div class="">
+        <div class="floatleft">
             <img src = "assets/b&blogotransparentcrop.png" id="img">
 
 
