--- a/SearchBB.html
+++ b/SearchBB.html
@@ -16,7 +16,18 @@
 
 
 
+    <div class="floatleft">
+        <img src = "assets/b&blogotransparentcrop.png" id="img">
 
+
+    </div>
+    <div class="floatright">
+
+
+
+        Currently not logged in!
+
+    </div>
 
 
 
@@ -66,7 +77,7 @@
 
     </section>
 
-<section class="container" id="foot">
+<section class="container" id="">
 
     <p>Copyright. Team D Solutions.</p>
 
