--- a/SearchBB.html
+++ b/SearchBB.html
@@ -7,80 +7,43 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <title>Search: theB&Bhub</title>
 </head>
-
-
 <body>
+
 <section class="container" id="banner">
-
-
-
-
-
     <div class="floatleft">
         <img src = "assets/b&blogotransparentcrop.png" id="img">
-
-
     </div>
     <div class="floatright">
-
-
-
         Currently not logged in!
-
     </div>
+</section>
 
-
-
-
-
-
-
-   </section>
 <section class="container" id="navigation">
-
-
         <div>
-
             <nav>
-
-
-
                 <ul>
-
-
                     <li><a href="B&Bregistration.html">Register!</a></li>
                     <li><a href="OwnerSignIn.php">Member Section</a></li>
                     <li><a href="Home.php">Search</a></li>
-
-
                 </ul>
-
             </nav>
-
-
-
-
         </div>
+</section>
 
-
-
-
-
-
-    </section>
 <section class="container" id="content2">
 
 
 
 
 
+</section>
 
-    </section>
-
-<section class="container" id="">
+<section class="container" id="foot">
 
     <p>Copyright. Team D Solutions.</p>
 
 </section>
+
+
 </body>
 </html>
