--- a/SearchBB.html
+++ b/SearchBB.html
@@ -31,41 +31,17 @@
 </section>
 
 <section class="container" id="content2">
-
     <form action="searchResultsPage.php" method="post">
-
         <table class="table1">
             <tr><td colspan="2">Search:</td></tr>
             <tr><td class="smallfont">Let's get Started!</td></tr>
 
+            <tr><td><label for="location">Pick a location:</label></td>
+                <td><select class="inputform" id="location" name="location"> </select></td></tr>
             <tr>
-                <td>
-                    <label for="location">Pick a location:</label></td>
-                <td><select class="inputform" id="location" name="location">
-
-
-
-
-
-
-
-                </select>
-                </td>
-            </tr>
-
-
-
-            <tr>
-
-                <td></td>
                 <td><a href="searchResultsPage.php"><p align="right" ><input id="submit" class="submit" type="submit" value="Submit"  /></p></a></td>
             </tr>
-
-
         </table></form>
-
-
-
 </section>
 
 <section class="container" id="foot">
