--- a/SearchBB.html
+++ b/SearchBB.html
@@ -48,7 +48,7 @@
             <tr>
 
                 <td></td>
-                <td><a href="Results.php"><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></a></td>
+                <td><a href="Results.php"><p align="right" ><input  type="submit" value="Submit"  /></p></a></td>
             </tr>
 
 
