--- a/SearchBB.html
+++ b/SearchBB.html
@@ -48,7 +48,7 @@
             </tr>
 <tr>
                 <td></td>
-                <td><a href="Results.php"><p align="right" ><input  type="submit" value="Submit"  /></p></a></td>
+                <td><input  type="submit" value="Submit" /></td>
             </tr>
 
 
