--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -1,63 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-
-
-
 <head>
     <meta charset="UTF-8">
-    <title>Register: theB&Bhub</title>
     <link rel="icon"
           type="image/png"
           href="assets/b&bicon.png">
     <link type="text/css" rel="stylesheet" href="style.css"/>
-
-    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
-
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <title>Register B&B: theB&Bhub</title>
 </head>
-
-<header>
-    <section class="right">
-        <div class="left">
-            <img src = "assets/b&blogotransparentcrop.png" id="img">
-
-
-        </div>
-        <div class="rightside">
-    </div>
-
-    </section>
-</header>
-
-<div class="nav">
-
-    <nav>
-
-
-
-        <ul class="moveright">
-
-            <!--<li><a href="B&Bregistration.html">Help</a></li>-->
-            <li><a href="B&Bregistration.html">Register</a></li>
-            <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
-            <li><a href="OwnerSignIn.php">Owner's Page</a></li>
-            <li><a href="Home.php">Search</a></li>
-
-
-        </ul>
-
-    </nav>
-
-
-
-
-</div>
-<hr width="100%" align="left" size="1" color="#d3d3d3">
 <body>
 
+<section class="container" id="banner">
+    <div class="floatleft">
+        <img src = "assets/b&blogotransparentcrop.png" id="img">
+    </div>
+    <div class="floatright">
+    </div>
+</section>
+
+<section class="container" id="navigation">
+    <div>
+        <nav>
+            <ul>
+                <li><a href="B&Bregistration.html">Contact</a></li>
+                <li><a href="B&Bregistration.html">Register</a></li>
+                <li><a href="OwnerSignIn.php">Member Area</a></li>
+                <li><a href="Home.php">Search</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<section class="container" id="content">
 <main>
 
     <form>
@@ -142,30 +118,18 @@
             </tr>
         </table></form>
 
-    <div class="right2">
 
-
-        <table class="table2">
-            <tr><td colspan="2"><p><strong>Example Message Board & User Information</strong></p></td></tr>
-            <tr class="tr2"><td class="t2"><p>Welcome, please use the form on this page to list your property on theB&Bhub.</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
-            <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
-
-
-        </table>
-    </div>
     <hr width="100%" align="left" size="1" color="#2f4f4f">
 
 
 </main>
-<div class="foot">
-    <footer>
+</section>
 
-        <p>Copyright. Team D Solutions.</p>
-    </footer></div>
+<section class="container" id="foot">
+
+    <p>Copyright. Team D Solutions.</p>
+
+</section>
 
 </body>
 </html>
