--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -27,7 +27,7 @@
                 <li><a href="B&Bregistration.html">Contact</a></li>
                 <li><a href="B&Bregistration.html">Register</a></li>
                 <li><a href="OwnerSignIn.php">Member Area</a></li>
-                <li><a href="Home.php">Search</a></li>
+                <li><a href="SearchBB.php">Search</a></li>
             </ul>
         </nav>
     </div>
@@ -121,7 +121,7 @@
 
 
 
-
+    <hr width="100%" align="left" size="1" color="#2f4f4f">
 
 </section>
 
