--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -89,7 +89,7 @@
         </table></form>
 
 
-    <hr width="100%" align="left" size="1" color="#2f4f4f">
+    <hr width="100%" size="1">
 
 </section>
 <section class="container" id="foot">
