--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -22,7 +22,7 @@
 
 <section class="container" id="navigation">
     <div>
-        <nav>
+        <nav role="main">
             <ul>
                 <li><a href="B&Bregistration.html">Contact</a></li>
                 <li><a href="B&Bregistration.html">Register</a></li>
@@ -127,7 +127,20 @@
 
 <section class="container" id="foot">
 
-    <p>Copyright. Team D Solutions.</p>
+    <div id="footernav">
+        <nav role="sub">
+            <ul>
+                <li><a href="B&Bregistration.html">Contact</a></li>
+                <li><a href="B&Bregistration.html">Register</a></li>
+                <li><a href="OwnerSignIn.php">Member Area</a></li>
+                <li><a href="SearchBB.php">Search</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="copyright">
+        <hr width="100%" size="1">
+        <p>Copyright. Team D Solutions.</p>
+    </div>
 
 </section>
 
