--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -123,7 +123,7 @@
 
 
 
-
+<section class="collapse">
 
 
 <button class="accordion">Section 1</button>
@@ -154,7 +154,7 @@
 </script>
 
 
-
+</section>
 
 
 
