--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -34,12 +34,12 @@
 </section>
 
 
-<main>
 
 
-<section class="container2" id="content2">
 
+<section class="container5" id="content2">
 
+<div id="floatleft">
     <form>
 
         <table class="table1">
@@ -122,11 +122,11 @@
             </tr>
         </table></form>
 
+</div>
 
-</section>
 
 
-    <section class="container2" id="collapse">
+    <div id="floatright">
 
 
         <button class="accordion">Section 1</button>
@@ -156,8 +156,8 @@
             }
         </script>
 
-</section>
-    </main>
+</div>
+
 
 
 
