--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -37,6 +37,87 @@
 
 
 
+
+
+
+
+
+
+
+<main>
+
+
+    <section class="container2" id="spotlight">
+        <img src="assets/london.jpg" id="img2">
+        <p>London, England</p>
+        <p>click to view</p>
+        <img src="assets/edinburgh.jpg" id="img2">
+        <p>Edinburgh, Scotland</p>
+        <p>click to view</p>
+
+
+    </section>
+
+    <section class="container2" id="spotlight2">
+
+        <img src="assets/glasgow.jpg" id="img2">
+        <p>Glasgow, Scotland</p>
+        <p>click to view</p>
+        <img src="assets/Aberdeen.jpg" id="img2">
+        <p>Aberdeen, Scotland</p>
+        <p>click to view</p>
+    </section>
+
+    <section class="container2" id="spotlight3">
+
+        <img src="assets/dundee.jpeg" id="img2">
+        <p>Dundee, Scotland</p>
+        <p>click to view</p>
+        <img src="assets/manchester.jpg" id="img2">
+        <p>Manchester, England</p>
+        <p>click to view</p>
+    </section>
+
+
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section class="container5" id="content2">
 
 <div id="floatleft">
