--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -35,304 +35,123 @@
 
 
 
-
-
-
-<form>
-
-    <table class="table1">
-        <tr><td colspan="2">List your Property!</td></tr>
-        <tr><td class="small">* Required Fields</td></tr>
-
-        <tr>
-            <td><label for="bbname">B&B Name: *</label></td>
-            <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
-        </tr>
-        <tr><td>
-            <label for="address">Address: *</label></td>
-            <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
-        </tr>
-
-        <tr><td>
-            <label for="address2">Address Line 2: *</label></td>
-            <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
-        </tr>
-
-        <tr><td>
-            <label for="city">City: *</label></td>
-            <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
-        </tr>
-
-
-        <tr><td>
-            <label for="telephone">Telephone: *</label></td>
-            <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
-        </tr>
-        <tr>
-            <td>
-                <label for="email">Email: *</label></td>
-            <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
-        </tr>
-
-
-
-
-        <tr><td>
-            <label for="bbdescription">B&B Description: *</label></td>
-            <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
-        </tr>
-
-        <tr><td>
-            <label for="roomdescription">Room Description: *</label></td>
-            <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
-        </tr>
-        <tr><td>
-            <label for="price">Price: *</label></td>
-            <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
-        </tr>
-        <tr><td>
-            <label for="checkin">Check-in time: *</label></td>
-            <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
-        </tr>
-
-        <tr><td>
-            <label for="checkout">Check-out time: *</label></td>
-            <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
-        </tr>
-
-        <tr><td>
-            <label for="picture">Upload a picture: *</label></td>
-            <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
-        </tr>
-
-        <tr><td>
-            <label  for="pets">Pets Allowed: *</label></td>
-            <td><select id="pets" class="inputform" name="title">
-                <option value="">Select Yes or No</option>
-                <option value="Yes">Yes</option>
-                <option value="No">No</option>
-
-            </select>
-            </td>
-        </tr>
-        <tr><td></td>
-            <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
-        </tr>
-    </table></form>
-
-<div class="right2">
-
-
-    <table class="table2">
-        <tr><td colspan="2"><p>Message Board - advertisements - user info</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 1</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 7</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 8</p></td></tr>
-        <tr class="tr2"><td class="t2"><p>row 9</p></td></tr>
-
-
-
-
-
-
-
-    </table>
-</div>
-<hr width="100%" align="left" size="1" color="#2f4f4f">
-
-
-
-
-
-
-
-
-
-    <section class="container2" id="spotlight">
-
-
-
-
-
-
-        <form>
-
-            <table class="table1">
-                <tr><td colspan="2">List your Property!</td></tr>
-                <tr><td class="small">* Required Fields</td></tr>
-
-                <tr>
-                    <td><label for="bbname">B&B Name: *</label></td>
-                    <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
-                </tr>
-                <tr><td>
-                    <label for="address">Address: *</label></td>
-                    <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label for="address2">Address Line 2: *</label></td>
-                    <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label for="city">City: *</label></td>
-                    <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
-                </tr>
-
-
-                <tr><td>
-                    <label for="telephone">Telephone: *</label></td>
-                    <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="email">Email: *</label></td>
-                    <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
-                </tr>
-
-
-
-
-                <tr><td>
-                    <label for="bbdescription">B&B Description: *</label></td>
-                    <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label for="roomdescription">Room Description: *</label></td>
-                    <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
-                </tr>
-                <tr><td>
-                    <label for="price">Price: *</label></td>
-                    <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
-                </tr>
-                <tr><td>
-                    <label for="checkin">Check-in time: *</label></td>
-                    <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label for="checkout">Check-out time: *</label></td>
-                    <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label for="picture">Upload a picture: *</label></td>
-                    <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
-                </tr>
-
-                <tr><td>
-                    <label  for="pets">Pets Allowed: *</label></td>
-                    <td><select id="pets" class="inputform" name="title">
-                        <option value="">Select Yes or No</option>
-                        <option value="Yes">Yes</option>
-                        <option value="No">No</option>
-
-                    </select>
-                    </td>
-                </tr>
-                <tr><td></td>
-                    <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
-                </tr>
-            </table></form>
-
-
-
-
-
-
-    </section>
-
-    <section class="container2" id="spotlight2">
-
-
-
-
-
-        <button class="accordion">Section 1</button>
-        <div class="panel">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-
-        <button class="accordion">Section 2</button>
-        <div class="panel">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-
-        <button class="accordion">Section 3</button>
-        <div id="foo" class="panel">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-
-        <script>
-            var acc = document.getElementsByClassName("accordion");
-            var i;
-
-            for (i = 0; i < acc.length; i++) {
-                acc[i].onclick = function(){
-                    this.classList.toggle("active");
-                    this.nextElementSibling.classList.toggle("show");
+<table>
+    <tr>
+        <td>
+
+            <form>
+
+                <table class="table1">
+                    <tr><td colspan="2">List your Property!</td></tr>
+                    <tr><td class="small">* Required Fields</td></tr>
+
+                    <tr>
+                        <td><label for="bbname">B&B Name: *</label></td>
+                        <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
+                    </tr>
+                    <tr><td>
+                        <label for="address">Address: *</label></td>
+                        <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label for="address2">Address Line 2: *</label></td>
+                        <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label for="city">City: *</label></td>
+                        <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
+                    </tr>
+
+
+                    <tr><td>
+                        <label for="telephone">Telephone: *</label></td>
+                        <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="email">Email: *</label></td>
+                        <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
+                    </tr>
+
+
+
+
+                    <tr><td>
+                        <label for="bbdescription">B&B Description: *</label></td>
+                        <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label for="roomdescription">Room Description: *</label></td>
+                        <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
+                    </tr>
+                    <tr><td>
+                        <label for="price">Price: *</label></td>
+                        <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
+                    </tr>
+                    <tr><td>
+                        <label for="checkin">Check-in time: *</label></td>
+                        <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label for="checkout">Check-out time: *</label></td>
+                        <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label for="picture">Upload a picture: *</label></td>
+                        <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
+                    </tr>
+
+                    <tr><td>
+                        <label  for="pets">Pets Allowed: *</label></td>
+                        <td><select id="pets" class="inputform" name="title">
+                            <option value="">Select Yes or No</option>
+                            <option value="Yes">Yes</option>
+                            <option value="No">No</option>
+
+                        </select>
+                        </td>
+                    </tr>
+                    <tr><td></td>
+                        <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
+                    </tr>
+                </table></form>
+
+        </td>
+        <td>
+
+
+
+            <button class="accordion">Section 1</button>
+            <div class="panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <button class="accordion">Section 2</button>
+            <div class="panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <button class="accordion">Section 3</button>
+            <div id="foo" class="panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <script>
+                var acc = document.getElementsByClassName("accordion");
+                var i;
+
+                for (i = 0; i < acc.length; i++) {
+                    acc[i].onclick = function(){
+                        this.classList.toggle("active");
+                        this.nextElementSibling.classList.toggle("show");
+                    }
                 }
-            }
-        </script>
-
-
-
-
-
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </script>
 
 
 
