--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -34,7 +34,7 @@
 </section>
 
 
-
+<secton>
 <table>
     <tr>
         <td>
@@ -153,8 +153,10 @@
                 }
             </script>
 
-
-
+</td>
+</tr>
+    </table>
+    </secton>
         <section class="container" id="foot">
 
     <div id="footernav">
