--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -126,20 +126,40 @@
 
 
 
-            <button class="accordion">Section 1</button>
+            <button class="accordion">Enter B&B Name</button>
             <div class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
             </div>
 
-            <button class="accordion">Section 2</button>
+            <button class="accordion">Enter Address.</button>
             <div class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
+
+            <div class="panel">
+                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
             </div>
 
-            <button class="accordion">Section 3</button>
+            <button class="accordion">Enter Address.</button>
+            <div class="panel">
+                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
+            <div class="panel">
+                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
+            </div>
+
+            <button class="accordion">Enter Address.</button>
+            <div class="panel">
+                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
+            <div class="panel">
+                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
+            </div>
+
+            <button class="accordion">Enter Address.</button>
+            <div class="panel">
+                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
+
+            <button class="accordion">Enter City</button>
             <div id="foo" class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+                <p>blah blah blah  </div>
 
             <script>
                 var acc = document.getElementsByClassName("accordion");
