--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -34,7 +34,7 @@
 </section>
 
 
-<secton>
+<section>
 <table>
     <tr>
         <td>
@@ -126,40 +126,63 @@
 
 
 
-            <button class="accordion">Enter B&B Name</button>
+            <button class="accordion">B&B Name?</button>
             <div class="panel">
                 <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
             </div>
 
-            <button class="accordion">Enter Address.</button>
+            <button class="accordion">Address?</button>
             <div class="panel">
                 <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
 
+            <button class="accordion">City?</button>
             <div class="panel">
-                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
+                <p>Blah... Blah... Blah...</p>
             </div>
 
-            <button class="accordion">Enter Address.</button>
+
+            <button class="accordion">Telephone?</button>
             <div class="panel">
-                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
-            <div class="panel">
-                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
+                <p>Blah... Blah... Blah...</p>
             </div>
 
-            <button class="accordion">Enter Address.</button>
+
+            <button class="accordion">Email?</button>
             <div class="panel">
-                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
-            <div class="panel">
-                <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
+                <p>Blah... Blah... Blah...</p>
             </div>
 
-            <button class="accordion">Enter Address.</button>
+            <button class="accordion">B&B Description?</button>
             <div class="panel">
-                <p>Enter the address of your bed and breakfast including the city and postcode.  </div>
+                <p>Blah... Blah... Blah... </div>
 
-            <button class="accordion">Enter City</button>
+
+            <button class="accordion">Room Description?</button>
+            <div class="panel">
+                <p>Blah... Blah... Blah...</p>
+            </div>
+
+            <button class="accordion">Check In Time</button>
+            <div class="panel">
+                <p>Blah... Blah... Blah... </p></div>
+
+
+            <button class="accordion">Check Out Time?</button>
+            <div class="panel">
+                <p>Blah... Blah... Blah...</p>
+            </div>
+
+            <button class="accordion">Upload Picture?</button>
+            <div class="panel">
+                <p>Blah... Blah... Blah...</p> </div>
+
+
+
+
+            <button class="accordion">Pets Allowed?</button>
             <div id="foo" class="panel">
-                <p>blah blah blah  </div>
+                <p>Blah... Blah... Blah...</p>
+            </div>
 
             <script>
                 var acc = document.getElementsByClassName("accordion");
@@ -176,7 +199,7 @@
 </td>
 </tr>
     </table>
-    </secton>
+    </section>
         <section class="container" id="foot">
 
     <div id="footernav">
