--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -41,7 +41,7 @@
 
             <form>
 
-                <table class="table1">
+                <table class="table3">
                     <tr><td colspan="2">List your Property!</td></tr>
                     <tr><td class="small">* Required Fields</td></tr>
 
@@ -200,7 +200,7 @@
 </tr>
     </table>
     </section>
-        <section class="container" id="foot">
+        <section class="container" id="foot2">
 
     <div id="footernav">
         <nav role="sub">
