--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -200,7 +200,7 @@
 </tr>
     </table>
     </section>
-        <section class="container" id="foot2">
+        <section class="container" id="foot">
 
     <div id="footernav">
         <nav role="sub">
