--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -120,8 +120,8 @@
                         <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
                     </tr>
                 </table></form>
-
-        </td>
+<table>
+        <tr>
         <td>
 
 
