--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -35,9 +35,7 @@
 
 
 <section>
-<table>
-    <tr>
-        <td>
+
 
             <form>
 
@@ -48,8 +46,8 @@
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
                         <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
-                    </tr>
-                    <tr><td>
+
+                    <td>
                         <label for="address">Address: *</label></td>
                         <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
                     </tr>
@@ -57,9 +55,9 @@
                     <tr><td>
                         <label for="address2">Address Line 2: *</label></td>
                         <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
-                    </tr>
 
-                    <tr><td>
+
+                    <td>
                         <label for="city">City: *</label></td>
                         <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
                     </tr>
@@ -68,8 +66,7 @@
                     <tr><td>
                         <label for="telephone">Telephone: *</label></td>
                         <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
-                    </tr>
-                    <tr>
+
                         <td>
                             <label for="email">Email: *</label></td>
                         <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
@@ -81,17 +78,16 @@
                     <tr><td>
                         <label for="bbdescription">B&B Description: *</label></td>
                         <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
-                    </tr>
 
-                    <tr><td>
+
+                    <td>
                         <label for="roomdescription">Room Description: *</label></td>
                         <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
                     </tr>
                     <tr><td>
                         <label for="price">Price: *</label></td>
                         <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
-                    </tr>
-                    <tr><td>
+                    <td>
                         <label for="checkin">Check-in time: *</label></td>
                         <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
                     </tr>
@@ -99,9 +95,7 @@
                     <tr><td>
                         <label for="checkout">Check-out time: *</label></td>
                         <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
-                    </tr>
-
-                    <tr><td>
+                    <td>
                         <label for="picture">Upload a picture: *</label></td>
                         <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
                     </tr>
@@ -121,10 +115,9 @@
                     </tr>
                 </table></form>
 
-        </td>
-        <td>
 
-
+</section>
+<section>
 
             <button class="accordion">B&B Name?</button>
             <div class="panel">
@@ -196,9 +189,7 @@
                 }
             </script>
 
-</td>
-</>
-    </table>
+
     </section>
         <section class="container" id="foot">
 
